--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 /doc
-Server/media/cute-file-browser.zip
-Server/media/cute-file-browser/index.html
-Server/media/cute-file-browser/scan.php
-Server/media/cute-file-browser/assets/css/styles.css
-Server/media/cute-file-browser/assets/js/script.js
-Server/media/cute-file-browser/files/place your files here
+/db
 *.db
 database.db
+/files
