Made /home a extension and added a flag for setting the path of home

--- a/Extensions/Home/config.json
+++ b/Extensions/Home/config.json
@@ -2,9 +2,10 @@
     "Name": "HOME",
     "Views":{
         "View": {
-            "Path": "/home2",
+            "Path": "/home",
             "ViewPath": "/views/home.pug",
             "NeedsQuerying": false,
+            "NeedsFiles": true,
             "QueryVariableNames": [],
             "DatabaseQuery": {
               "Result": null,
