--- a/Extensions/PDFReader/config.json
+++ b/Extensions/PDFReader/config.json
@@ -5,6 +5,7 @@
             "Path": "/pdf",
             "ViewPath": "/views/pdf.pug",
             "NeedsQuerying": true,
+            "NeedsFiles": false,
             "QueryVariableNames": [
               "Hash",
               "Username"
